2018-04-30 Release 4.7
	- remove obsolete Python2 compatibility code
	- add is_cached flag to hxl.model.Dataset and subclasses
	- add reset() method to hxl.model.Dataset and subclasses
	- update docstrings

2018-03-29 Release 4.6
	- end support for Python 2 (will die with a RuntimeError;
	  next release will remove Python2 compatibility code relics)
	- start implementing logging support
	- all command-line utilities now have a --log option to set the
  	  logging level
	- restore support for preserving original attribute order (except
	  for JSON object flavoured export)
	- add hxl.Column.get_display_tag method with optional attribute
	  sorting
	- add support for lat/lon normalisation to clean-data filter
	- add purge option to clean_data to allow removing numbers, dates,
	  or lat/lon that can't be parsed during data cleaning
	- fix bug opening a Google Sheet from a CKAN resource URL
	- allow opening a dataset from a CKAN dataset URL (uses first
	  resource)
	- make the 'patterns' parameter optional for the JSON count recipe

2018-02-05 Release 4.5.1
	- bug-fix release: do not let a misspelled date cause a fatal
	  exception

2018-01-31 Release 4.5
	- the merge-data filter now looks for keys in *all* candidate
	  columns (not just the first-matching ones)
	- add skip_untagged parameter to without_columns and ColumnFilter,
	  for removing columns without HXL hashtags
	- hxl.model.Row.get_all can take a default value
	- the clean-data filter has a number_format option (e.g. "0.2f")
	- the hxlclean command-line script has a --number-format option
	- hxl.model.Column.display_tag always shows attributes sorted, per HXL
	  1.1 beta
	- added hxl.model.Row.dictionary property to return row as a
	  Python dict
	- hxl.model.Source.gen_json() has a new use_objects option to use
	  the JSON list-of-objects format from HXL 1.1 beta as output
	- hxl.io.write_json() has the use_objects option to pass on to
	  hxl.model.Source.gen_json()