@@ -1,7 +1,8 @@
 2018-04-30 Release 4.7
 	- remove obsolete Python2 compatibility code
 	- add is_cached flag to hxl.model.Dataset and subclasses
-	- add reset() method to hxl.model.Dataset and subclasses
+	- updated all AbstractInput to be iterables rather than iterators
+	  (for repeatability)
 	- update docstrings
 
 2018-03-29 Release 4.6
